# xradio

./: .gitignore  .readthedocs.yaml  Benchmark-pytest.md  CONTRIBUTOR_LICENSING_AGREEMENT.txt  CONTRIBUTOR_LICENSING_AGREEMENT_ESO.txt  CONTRIBUTOR_LICENSING_AGREEMENT_EXCEPTION.txt  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  asv.conf.json  pyproject.toml  test.py
.github/ISSUE_TEMPLATE/: msv4-review.md
.github/workflows/: black.yml  python-publish-template-v2.yml  python-publish-v2.yml  python-publish.yml  python-testing-basic-schema-install.yml  python-testing-casatools.yml  python-testing-integration.yml  python-testing-linux.yml  python-testing-macos.yml  pythonpublish.yml  run-ipynb.yml
demo/: demo.ipynb
dev/carta/: image_schema.ipynb
dev/review_fs/: review_fs.ipynb
doc/: VLBA_conversion.ipynb  ephemeris_conversion.ipynb  global_vlbi.ipynb  image_tutorial.ipynb  lofar_conversion.ipynb  meerkat_conversion.ipynb  meta_data_proposal.ipynb  ms_conversion_tutorial.ipynb  ngEHT_conversion.ipynb  single_dish_conversion.ipynb  ska_mid_conversion.ipynb  sphinx.txt  vis_tutorial.ipynb
doc/source/: VLBA_conversion.ipynb  conf.py  decisions.rst  development.ipynb  ephemeris_conversion.ipynb  global_vlbi.ipynb  guides.rst  image_overview.ipynb  image_tutorial.ipynb  index.rst  lofar_conversion.ipynb  meerkat_conversion.ipynb  meta_data_proposal.ipynb  model.rst  ngEHT_conversion.ipynb  obs_overview.ipynb  overview.ipynb  schema.rst  single_dish_conversion.ipynb  ska_mid_conversion.ipynb  vis_model.rst  vis_schema.rst  vis_tutorial.ipynb
doc/source/_static/: custom.css
doc/source/correlated_data/guides/: index.rst
doc/source/correlated_data/schema_and_api/: vis_schema.rst
doc/source/correlated_data/tutorials/: ps_vis_full_dataset.ipynb
doc/source/guides/processing_set/: ALMA_single_dish.ipynb  LOFAR.ipynb  MeerKAT.ipynb  VLBA.ipynb  VLBI.ipynb
doc/source/image_data/tutorials/: index.rst
doc/source/observation_data/guides/: ALMA_ephemeris.ipynb  ALMA_single_dish.ipynb  LOFAR.ipynb  MeerKAT.ipynb  SKA_mid.ipynb  VLBA.ipynb  VLBI.ipynb  index.rst  ngEHT.ipynb
doc/source/observation_data/schema_and_api/: index.rst  vis_api.rst
doc/source/observation_data/tutorials/: index.rst  ps_vis.ipynb  ps_vis_full_dataset.ipynb
doc/source/tutorials/image/: image.ipynb
doc/source/tutorials/processing_set/: ps_vis.ipynb
doc/source/xradio_sphinx/: __init__.py  schema_table.py
docs/: sphinx.txt
docs/source/: conf.py  decisions.rst  development.ipynb  development.rst  image_overview.ipynb  index.rst  measurement_set_overview.ipynb  measures.ipynb  measures.rst  overview.ipynb  overview.rst  schema.rst
docs/source/_static/: custom.css
docs/source/correlated_data/guides/: ALMA_ephemeris.ipynb  ALMA_single_dish.ipynb  LOFAR.ipynb  MeerKAT.ipynb  SKA_mid.ipynb  VLBA.ipynb  VLBI.ipynb  ngEHT.ipynb
docs/source/correlated_data/schema_and_api/: correlated_data_api.rst  correlated_data_schema.rst  index.rst  vis_api.rst  vis_schema.rst
docs/source/correlated_data/tutorials/: ps_vis.ipynb  ps_vis_full_dataset.ipynb
docs/source/image_data/tutorials/: image.ipynb  image.ipynb.dep  image_schema_proposal.ipynb
docs/source/measurement_set/: api.rst  overview.ipynb  overview.rst  schema.rst  tutorials_guides.rst
docs/source/measurement_set/guides/: ALMA_SD.ipynb  ALMA_ephemeris.ipynb  ALMA_single_dish.ipynb  GBT_single_dish.ipynb  GMRT.ipynb  LOFAR.ipynb  MeerKAT.ipynb  SKA_low.ipynb  SKA_mid.ipynb  VLBA.ipynb  (+6 more)
docs/source/xradio_sphinx/: schema_table.py
reviews/: review_antenna_xds.ipynb  review_correction_xds.ipynb  review_field_and_source_xds.ipynb  review_ps.ipynb
schemas/: SpectrumXds.json  VisibilityXds.json
scripts/: export_schema.py  import_schema.py
src/xradio/: __init__.py  gdown_utils.py
src/xradio/_utils/: array.py  common.py  coord_math.py  dict_helpers.py  list_and_array.py  logging.py  schema.py  xarray_helpers.py
src/xradio/calibration_set/: schema.py
src/xradio/correlated_data/: __init__.py  _processing_set.py  convert_msv2_to_processing_set.py  correlated_xds.py  load_processing_set.py  open_processing_set.py  processing_set.py  schema.py  test__processing_set.py
src/xradio/data/: _dropbox.py  _google_drive.py  datasets.py
src/xradio/datatree/: __init__.py  datatree_accessor.py  datatree_builder.py  dt_convert.py
src/xradio/image/: __init__.py  image.py  image_xds.py  schema.py
src/xradio/measurement_set/: __init__.py  _msv2_backend.py  asdm_xarray_backend.py  convert_msv2_to_processing_set.py  correlated_xds.py  load_processing_set.py  measurement_set_xds.py  measurement_set_xdt.py  open_msv2.py  open_processing_set.py  processing_set.py  processing_set_xdt.py  schema.py  test__processing_set.py
src/xradio/schema/: __init__.py  bases.py  check.py  common.py  dataclass.py  export.py  metamodel.py  typing.py  xarray_dataclasses_license.txt
src/xradio/sphinx/: schema_table.py
src/xradio/testing/: README.md  __init__.py  assertions.py
src/xradio/vis/: __init__.py  _processing_set.py  _zarr.py  convert_msv2_to_processing_set.py  load_processing_set.py  model.py  read_processing_set.py  schema.py  vis_io.py
tests/: README.md  conftest.py
tests/_utils/: __template__.py  conftest.py
tests/stakeholder/: readme.md  test_correlated_stakeholder.py  test_image_stakeholder.py  test_measure_set_stakeholder.py  test_vis_stakeholder.py
tests/unit/: __test_example__.py  disable_test_image.py  test_dict_helpers.py  test_image.py  test_schema.py  test_schema_template.py
tests/unit/correlated_data/: conftest.py
tests/unit/image/: conftest.py  test_direction_reference_frame.py  test_image.py  test_image_xds.py
tests/unit/measurement_set/: conftest.py  test_asdm_xarray_backend.py  test_convert_msv2_to_processing_set.py  test_load_processing_set.py  test_measurement_set_xdt.py  test_processing_set_xdt.py
tests/unit/output_path/: .zattrs  .zmetadata
tests/unit/schema/: test_dataclass.py  test_export.py  test_schema.py
tests/unit/testing/: test_assertions.py
tests/unit/vis/: conftest.py  test_vis_io.py
(+304 files in other folders)
