[project]
name = "xradio"
version = "v0.0.60"
description = " Xarray Radio Astronomy Data IO"
authors = [
    {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
    {name = "Federico Montesino Pouzols", email="pouzols@eso.edu"},
    {name = "Dave Mehringer", email="dmehring@nrao.edu"},
    {name = "Peter Wortmann", email="peter.wortmann@skao.int"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">= 3.11, < 3.14"

dependencies = [
    'astropy',
    'toolviper>=0.0.12',
    'numba>=0.57.0',
    's3fs',
    'scipy',
    'xarray',
    'zarr>=2,<3',
    'pyarrow',
    'typeguard',
    'numcodecs<0.16',
    'psutil' # psutil is needed so large FITS images are not loaded into memory
]

# toolviper has the following key dependencies also directly used by XRADIO (https://github.com/casangi/toolviper/blob/main/pyproject.toml):
#    'numpy',
#    'dask',
#    'distributed',

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
    'pytest-html',
]

python_casacore = [    
    'python_casacore>=3.6.1; sys_platform != "darwin"'
]

interactive = [
    'matplotlib',
    'prettytable',
    'jupyterlab',
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
]

docs = [
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]

all = [
    'pytest',
    'pytest-cov',
    'pytest-html',
    'python_casacore>=3.6.1; sys_platform != "darwin" ',
    'matplotlib',
    'prettytable',
    'jupyterlab',
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers"
]
testpaths = [
    "tests"
]
pythonpath = [
    "."
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.py$'
